modified:   cw4/Makefile 	modified:   cw4/README 	modified:   cw4/program4.c 	deleted:    cw5/.idea/.gitignore 	deleted:    cw5/.idea/misc.xml 	modified:   cw5/Makefile 	modified:   cw5/README 	modified:   cw5/consumer.c 	modified:   cw5/producer.c 	deleted:    cw5/producer.txt 	new file:   cw5/program5.c 	deleted:    cw5/programA.c 	new file:   cw5/source.txt 	deleted:    cw6/.idea/.gitignore 	deleted:    cw6/.idea/misc.xml

--- a/cw4/README
+++ b/cw4/README
@@ -8,6 +8,7 @@ Proces producenta powtarza tę operację, dopóki nie odczyta całego pliku.
 W międzyczasie proces producenta generuje losowy czas oczekiwania, aby symulować
 przesyłanie danych w różnych momentach. Na ekranie terminala wyświetlane są
 informacje o postępie przesyłania danych. Nazwy plików podajemy w pliku Makefile.
+Ilość przesyłanych danych uzupełniamy w makefile w zmiennych download i upload.
 =================================================================================
 Program uruchamiamy wpisując:
 -> make run
